feature: terminar vidas

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             alt="foto do jogador"
             height="60px"
           />
-          <h2>x3</h2>
+          <h2 id="life">x3</h2>
         </div>
       </div>
 
